# imgproc

./: .gitmodules  CMakeLists.txt  LICENSE
src/: cli.c  cli.h  config.c  config.h  io.c  io.h  main.c  types.c  types.h
src/process/: pixel_ops.c  pixel_ops.h  process.c  process.h
test/: test_runner.c
vendors/argtable3/: README.md
vendors/argtable3/tests/: CMakeLists.txt  testargfile.c  testarghashtable.c
